--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,20 +1,77 @@
 # Reproducible Research: Peer Assessment 1
 
 
+```{r echo=TRUE}
+
 ## Loading and preprocessing the data
 
+# unzip data
+unzip("activity.zip")
 
+# read data
+data <- read.csv("activity.csv")
+
+# replace NA values with 0 
+datafiltered <- na.omit(data)
 
 ## What is mean total number of steps taken per day?
 
+# sum number of steps, grouping by days
+stepsbyday <- aggregate(datafiltered$steps, by=list(datafiltered$date), sum)
 
+# change names of columns in dataframe
+names(stepsbyday) <- c("day","number_of_steps")
+
+# make a histogram of the total number of steps taken each day
+hist(stepsbyday$number_of_steps, xlab = "Number of steps taken each day")
+
+# calculate and report the mean and median total number of steps taken per day
+cat("Mean number of steps per day: ",mean(stepsbyday$number_of_steps))
+cat("Median number of steps per day: ",median(stepsbyday$number_of_steps))
 
 ## What is the average daily activity pattern?
 
+# Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis)
+# and the average number of steps taken, averaged across all days (y-axis)
 
+# calculate mean number of steps by interval
+stepsinterval <- aggregate(datafiltered$steps, 
+                           by=list(datafiltered$interval), mean)
+
+# change names of columns in dataframe
+names(stepsinterval) <- c("interval","number_of_steps")
+
+# plot time series interval vs 
+plot(stepsinterval$interval, stepsinterval$number_of_steps, type="l", 
+     xlab="Interval", ylab="Number of steps")
+
+# Which 5-minute interval, on average across all the days in the dataset, 
+# contains the maximum number of steps?
+maxinterval<- stepsinterval[max(stepsinterval$number_of_steps) == 
+                                    stepsinterval$number_of_steps,1]
+cat("Interval with maximun number of steps: ", maxinterval)
 
 ## Imputing missing values
 
+# Calculate and report the total number of missing values in the dataset
+cat("Total number of missing values: ", colSums(is.na(data))[1])
 
+# Devise a strategy for filling in all of the missing values in the dataset.
+
+dataf <- merge(data,stepsinterval)
+# replace NAs with median number of stops per interval
+dataf$steps[is.na(dataf$steps)] <- dataf$number_of_steps[is.na(dataf$steps)]
 
 ## Are there differences in activity patterns between weekdays and weekends?
+library(lattice)
+dataf$date <- as.Date(dataf$date)
+dataf$isWeekend <- as.POSIXlt(dataf$date)$wday %in% c(6,7)
+dataf$number_of_steps <- NULL
+dataf <- aggregate(dataf$steps, by=list(dataf$interval, dataf$isWeekend), mean)
+names(dataf) <- c("interval","isWeekend", "mean_number_steps")
+xyplot(mean_number_steps ~ interval | isWeekend, data = dataf, layout = c(1, 2),type="l")
+
+
+
+```
+
