--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -13,13 +13,14 @@ unzip("activity.zip")
 data <- read.csv("activity.csv")
 
 # replace NA values with 0 
+# Note: we'll need original data later
 datafiltered <- na.omit(data)
 
 ```
 
 ## What is mean total number of steps taken per day?
 
-Make a histogram of the total number of steps taken each day:
+We'll make a histogram of the total number of steps taken each day:
 
 ``` {r echo = TRUE}
 
@@ -33,7 +34,7 @@ hist(stepsbyday$number_of_steps, xlab = "Number of steps taken each day")
 
 ```
 
-Calculate and report the mean and median total number of steps taken per day:
+The mean and median total number of steps taken per day are:
 
 ``` {r echo=TRUE}
 cat("Mean number of steps per day: ",mean(stepsbyday$number_of_steps))
@@ -42,7 +43,7 @@ cat("Median number of steps per day: ",median(stepsbyday$number_of_steps))
 
 ## What is the average daily activity pattern?
 
-Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis)
+To gain insight into this question, we'll make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis)
 and the average number of steps taken, averaged across all days (y-axis):
 
 ``` {r echo = TRUE}
@@ -74,7 +75,8 @@ cat("Total number of missing values: ", colSums(is.na(data))[1])
 ```
 
 Devise a strategy for filling in all of the missing values in the dataset:
-- We'll fill missing values using mean values for each interval  
+
+- Our strategy: We'll create a new dataset named "dataf", <b> replacing missing values with mean values for each interval</b> :
 
 ```{r echo=TRUE}
 # merge with data frame containing mean number of steps 
@@ -82,6 +84,30 @@ dataf <- merge(data,stepsinterval)
 # replace NAs with median number of steps per interval
 dataf$steps[is.na(dataf$steps)] <- dataf$number_of_steps[is.na(dataf$steps)]
 ```
+
+Then, we make a histogram of the total number of steps taken each day, using "dataf" dataframe:
+
+```{r echo=TRUE}
+# sum number of steps, grouping by days
+newstepsbyday <- aggregate(dataf$steps, by=list(dataf$date), sum)
+
+# change names of columns in dataframe
+names(newstepsbyday) <- c("day","number_of_steps")
+
+# plot histogram
+hist(newstepsbyday$number_of_steps, xlab = "Number of steps taken each day")
+```
+
+And finally we calculate mean and median:
+
+``` {r echo=TRUE}
+cat("Mean number of steps per day: ",mean(newstepsbyday$number_of_steps))
+cat("Median number of steps per day: ",median(newstepsbyday$number_of_steps))
+```
+
+The results match original (non-corrected) data.
+
+Imputing missing data doesn't change overall conclussions.
 
 ## Are there differences in activity patterns between weekdays and weekends?
 
